tests/fixtures/semantic/invalid/nested-function-missing-return.ck
module app.bad

fn outer() -> Int {
  fn helper() -> String {
    let x = "a"
  }
  return 1
}
